--- a/Mini-Golf/Mini-Golf/Mini-Golf.vcxproj
+++ b/Mini-Golf/Mini-Golf/Mini-Golf.vcxproj
@@ -141,12 +141,14 @@
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Hole.cpp" />
     <ClCompile Include="Mini-Golf.cpp" />
     <ClCompile Include="Startscreen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Hole.h" />
     <ClInclude Include="Startscreen.h" />
   </ItemGroup>
   <ItemGroup>
