--- a/Mini-Golf/Mini-Golf/Mini-Golf.vcxproj.filters
+++ b/Mini-Golf/Mini-Golf/Mini-Golf.vcxproj.filters
@@ -61,5 +61,8 @@
     <Text Include="Level1.txt">
       <Filter>Levels</Filter>
     </Text>
+    <Text Include="Levels explained.txt">
+      <Filter>Levels</Filter>
+    </Text>
   </ItemGroup>
 </Project>
