added some empty levels + hole now takes x and y parameters

--- a/Mini-Golf/Mini-Golf/Mini-Golf.vcxproj.filters
+++ b/Mini-Golf/Mini-Golf/Mini-Golf.vcxproj.filters
@@ -64,5 +64,17 @@
     <Text Include="Levels explained.txt">
       <Filter>Levels</Filter>
     </Text>
+    <Text Include="Level2.txt">
+      <Filter>Levels</Filter>
+    </Text>
+    <Text Include="Level3.txt">
+      <Filter>Levels</Filter>
+    </Text>
+    <Text Include="Level4.txt">
+      <Filter>Levels</Filter>
+    </Text>
+    <Text Include="Level5.txt">
+      <Filter>Levels</Filter>
+    </Text>
   </ItemGroup>
 </Project>
