--- a/Mini-Golf/Mini-Golf/Mini-Golf.vcxproj
+++ b/Mini-Golf/Mini-Golf/Mini-Golf.vcxproj
@@ -160,6 +160,10 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="Level1.txt" />
+    <Text Include="Level2.txt" />
+    <Text Include="Level3.txt" />
+    <Text Include="Level4.txt" />
+    <Text Include="Level5.txt" />
     <Text Include="Levels explained.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
