beginning of level UI

--- a/Mini-Golf/Mini-Golf/Mini-Golf.vcxproj.filters
+++ b/Mini-Golf/Mini-Golf/Mini-Golf.vcxproj.filters
@@ -76,5 +76,8 @@
     <Text Include="Level5.txt">
       <Filter>Levels</Filter>
     </Text>
+    <Text Include="Scores.txt">
+      <Filter>Levels</Filter>
+    </Text>
   </ItemGroup>
 </Project>
