worked on scores and ShowUI()

--- a/Mini-Golf/Mini-Golf/Mini-Golf.vcxproj.filters
+++ b/Mini-Golf/Mini-Golf/Mini-Golf.vcxproj.filters
@@ -79,5 +79,8 @@
     <Text Include="Scores.txt">
       <Filter>Levels</Filter>
     </Text>
+    <Text Include="Scores explained.txt">
+      <Filter>Levels</Filter>
+    </Text>
   </ItemGroup>
 </Project>
