--- a/Mini-Golf/Mini-Golf/Mini-Golf.vcxproj
+++ b/Mini-Golf/Mini-Golf/Mini-Golf.vcxproj
@@ -165,6 +165,7 @@
     <Text Include="Level4.txt" />
     <Text Include="Level5.txt" />
     <Text Include="Levels explained.txt" />
+    <Text Include="Scores explained.txt" />
     <Text Include="Scores.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
